--- a/css/app.css
+++ b/css/app.css
@@ -35,12 +35,12 @@
     margin: 5px;
 }
 
-.log ul .player-turn {
+.log ul .luke-turn {
     color: blue;
     background-color: #e4e8ff;
 }
 
-.log ul .monster-turn {
+.log ul .vader-turn {
     color: red;
     background-color: #ffc0c1;
 }
@@ -92,3 +92,14 @@ button {
 #give-up:hover {
     background-color: #c7c7c7;
 }
+
+.avatar {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5px;
+    display: block;
+    box-shadow: 0px 3px 6px #ccc;
+  }
